# GOAT-CEO

./: .gitignore  CHANGELOG.md  CLAUDE.md  GOAT-CEO-DESIGN.md  GOAT-CEO-HARDENING-PLAN.md  GOAT-CEO-REWORK-DESIGN.md  LICENSE  README.md
tools/research-system/: .gitattributes  .gitignore  DESIGN.md  README.md  ROADMAP.md  VENDORED.md  pyproject.toml
tools/research-system/reviews/: BENCHMARK-RESULTS.md  PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  PHASE-6.md  PHASE-7.md  REMAINING-ITEMS.md
tools/research-system/scripts/: gen_schemas.py  run_benchmark.py  run_calibration.py  run_capture.py  run_external_score.py  run_research.py  run_tier_sweep.py
tools/research-system/src/research_system/: __init__.py  answer.py  benchmark.py  capture.py  conformal.py  contracts.py  decompose.py  discover.py  external.py  gate.py  grounding.py  llm.py  orchestrate.py  paths.py  retrieve.py  synthesize.py  tier_sweep.py  verify.py
tools/research-system/tests/: test_answer.py  test_benchmark.py  test_capture.py  test_conformal.py  test_contracts.py  test_decompose.py  test_discover.py  test_external.py  test_gate.py  test_grounding.py  test_llm.py  test_orchestrate.py  test_paths.py  test_retrieve.py  test_synthesize.py  test_tier_sweep.py  test_verify.py
tools/rubric/: .gitattributes  .gitignore  DESIGN.md  README.md  ROADMAP.md  VENDORED.md  pyproject.toml
tools/rubric/kb/: rubric.kb.json
tools/rubric/kb/conventions/: colocated-tests.json  error-handling.json  named-exports.json
tools/rubric/kb/exemplars/: ex-colocated-test.json  (+2 more)
tools/rubric/reviews/: BUILD.md
tools/rubric/scripts/: build_seed_kb.py
tools/rubric/tests/: test_cli.py  test_codify.py  test_contracts.py  test_e2e.py  test_gate.py  test_hook.py  test_index.py  test_integration.py  test_kb.py  test_measure.py  test_orchestrate.py  test_paths.py  test_retrieve.py  test_review.py  test_verify.py
(+86 files in other folders)
